changed java GC settings for ver 9